--- a/index.html
+++ b/index.html
@@ -228,17 +228,21 @@
             <div class="cards">
                 <div class="cardcontent">
                     <div class="project-img">
-                        <img src="./assets/cryptooracle.png" alt="project 1">
+                        <img src="./assets/dascafe.jpg" alt="project 1">
                     </div>
-                    <h2>React - Crypto-Oracle</h2>
-                    <p> CryptoOracle is a website for live crypto prices listing using real-time data feeds.
-                        CryptoOracle displays rank, current price, market cap and circulating supply for the top 100
-                        crypto projects. Search for your favorite coins!!
+                    <h2>React - Das Café</h2>
+                    <p>
+                        Das Café is a web app built with React.js with an eye-catching UI
+                        and easy
+                        navigation. For the development of the menu, menu bag,
+                        and slider menu, react hooks were used to
+                        extract stateful logic from a component so it could be
+                        tested independently and reused.
                     </p>
                     <div class="icon-live">
-                        <a href="https://github.com/wdiazdev/CryptoOracle" target="_blank"><i
+                        <a href="https://github.com/wdiazdev/Das-Cafe" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
-                        <a href="https://wdiazdev.github.io/CryptoOracle/" target="_blank">live</a>
+                        <a href="https://wdiazdev.github.io/Das-Cafe/" target="_blank">live</a>
                     </div>
                 </div>
             </div>
@@ -248,10 +252,32 @@
             <div class="cards">
                 <div class="cardcontent">
                     <div class="project-img">
+                        <img src="./assets/cryptooracle.png" alt="project 1">
+                    </div>
+                    <h2>React - Crypto-Oracle</h2>
+                    <p>
+                        CryptoOracle is a website for live cryptocurrency price
+                        listings using real-time data feeds. CryptoOracle displays
+                        the top 100 crypto projects' rank, current price, market cap,
+                        and circulating supply. Search for your favorite coins!
+                    </p>
+                    <div class="icon-live">
+                        <a href="https://github.com/wdiazdev/CryptoOracle" target="_blank"><i
+                                class="fa-brands fa-github"></i></a>
+                        <a href="https://wdiazdev.github.io/CryptoOracle/" target="_blank">live</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- CARD 3 -->
+
+            <div class="cards">
+                <div class="cardcontent">
+                    <div class="project-img">
                         <img src="./assets/project1.jpg" alt="project 1">
                     </div>
-                    <h2>Responsive Design</h2>
-                    <p> Sweat Zone: Almost every new client these days wants a mobile version of their website.
+                    <h2>CSS3 - HTML5 - JS</h2>
+                    <p> Almost every new client these days wants a mobile version of their website.
                         Sweat Zone is a fully responsive website with a simple user interface and great navigation
                         experience. You are welcome to visit!!
                     </p>
@@ -263,7 +289,7 @@
                 </div>
             </div>
 
-            <!-- CARD 3 -->
+            <!-- CARD 4 -->
 
             <div class="cards">
                 <div class="cardcontent">
@@ -271,10 +297,11 @@
                         <img src="./assets/project2.jpg" alt="project 2">
                     </div>
                     <h2>API Integration</h2>
-                    <p> Movie Zone: API integration implemented to allow users to query their favorite movies overview,
-                        release date and average rating. The application provide data about the 20 most popular movies
-                        in real time. Get some popcorn and try it!!
-
+                    <p>
+                        Movie Zone: API integration is implemented to allow users to query their
+                        favorite movies overview, release date, and average rating.
+                        The application provides data about the 20 most popular movies in real
+                        time. Get some popcorn and try it!!
                     </p>
                     <div class="icon-live">
                         <a href="https://github.com/wdiazdev/movie-app" target="_blank"><i
@@ -284,18 +311,21 @@
                 </div>
             </div>
 
-            <!-- CARD 4 -->
+            <!-- CARD 5 -->
 
             <div class="cards">
                 <div class="cardcontent">
                     <div class="project-img">
                         <video class="project--video" src="./assets/Furious Car Game video.mp4"
-                            poster="./assets/furiouscar.jpg" controls muted></video>
+                            poster="./assets/furiouscar.jpg" controls muted autoplay loop></video>
                     </div>
                     <h2>Car Game - Python GUI</h2>
-                    <p>Furious is a car game built with Python and Pygame module. The app required
-                        integers, lists, tuples, while loops, for loops and if statements to deliver better
-                        user experience.</p>
+                    <p>
+                        Furious is a car game built with Python and the Pygame module.
+                        The app requires integers, lists,
+                        tuples, while loops, for loops, and if statements to deliver a better
+                        user experience.
+                    </p>
                     <div class="icon-live">
                         <a href="https://github.com/wdiazdev/python-car-game-pygame" target="_blank"><i
                                 class="fa-brands fa-github"></i></a>
